fix(i18n): fix english text on alert messages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,7 @@
   },
   "ALERT_MESSAGES": {
     "SUCCESS_TITLE": "Great",
-    "SUCCESS_TEXT": "Succesful login"
+    "SUCCESS_SIGNUP_TEXT": "Successful sign up",
+    "SUCCESS_LOGIN_TEXT": "Successful login"
   }
 }
