fix(authentication): placeholder accesibility practices

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,11 @@
     "EMAIL": "Email",
     "PASSWORD": "Password",
     "CONFIRM_PASSWORD": "Confirm Password",
+    "PLACEHOLDER_FIRST_NAME": "E.g. John",
+    "PLACEHOLDER_LAST_NAME": "E.g. Doe",
+    "PLACEHOLDER_EMAIL": "E.g. john@email.com",
+    "PLACEHOLDER_PASSWORD": "At least 8 characters",
+    "PLACEHOLDER_CONFIRM_PASSWORD": "Repeat the password",
     "SIGNUPBTN": "Sign up",
     "LOGINBTN": "Login",
     "REDIRECT_LOGIN": "Doesn't have an account? click ",
