--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,6 +7,11 @@
     "EMAIL": "Correo",
     "PASSWORD": "Contraseña",
     "CONFIRM_PASSWORD": "Confirmar Contraseña",
+    "PLACEHOLDER_FIRST_NAME": "E.j. John",
+    "PLACEHOLDER_LAST_NAME": "E.j. Doe",
+    "PLACEHOLDER_EMAIL": "E.j. john@email.com",
+    "PLACEHOLDER_PASSWORD": "Al menos 8 caracteres",
+    "PLACEHOLDER_CONFIRM_PASSWORD": "Repite la contraseña",
     "SIGNUPBTN": "Crear cuenta",
     "LOGINBTN": "Iniciar Sesión",
     "REDIRECT_LOGIN": "¿Ya tienes una cuenta? Haz clic ",
@@ -32,7 +37,7 @@
     "SUCCESS_TITLE": "Genial",
     "SUCCESS_SIGNUP_TEXT": "Registro exitoso",
     "SUCCESS_LOGIN_TEXT": "Inicio de sesión exitoso",
-    "CHECK_FIELDS": "Hay campos invalidos, por favor revisalos"
+    "CHECK_FIELDS": "Hay campos inválidos, por favor revísalos"
   },
   "NAVBAR": {
     "SKIP": "Ir al contenido",
