fix(navbar): skip to content on navbar

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -42,6 +42,7 @@
   },
   "NAVBAR": {
     "SKIP": "Skip to content",
+    "CONTENT": "Press tab to move to main content",
     "ES": "Spanish",
     "EN": "English"
   }
