--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -41,6 +41,7 @@
   },
   "NAVBAR": {
     "SKIP": "Ir al contenido",
+    "CONTENT": "Presiona tab para ir al contenido principal",
     "ES": "Español",
     "EN": "Inglés"
   }
