fix(navbar): new language selector

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -50,5 +50,17 @@
     "CONTENT": "Press tab to move to main content",
     "ES": "Spanish",
     "EN": "English"
+  },
+  "API":{
+    "REGISTER":{
+      "CREATED": "User created succesfully",
+      "DUPLICATED": "That email has already been used",
+      "INVALID_PASSWORD":"Password must have 8 characters"
+    },
+    "TOKEN":{
+      "GENERATED": "Welcome",
+      "INVALID_CRED": "Incorrect email or password",
+      "INACTIVE": "Inactive Account: You have to activate your account from your email"
+    }
   }
 }
