feat(translate-messages.service): Change title based on language

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -51,6 +51,10 @@
     "ES": "Spanish",
     "EN": "English"
   },
+  "TITLE": {
+    "SIGNUP":"Sign Up",
+    "LOGIN":"Login"
+  },
   "API":{
     "REGISTER":{
       "CREATED": "User created succesfully",
