--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -50,6 +50,10 @@
     "ES": "Español",
     "EN": "Inglés"
   },
+  "TITLE": {
+    "SIGNUP":"Registro",
+    "LOGIN":"Inicio de Sesión"
+  },
   "API": {
     "REGISTER":{
       "CREATED": "Usuario creado exitosamente",
