feat(navbar): burger icon on responsive view

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -48,8 +48,8 @@
   "NAVBAR": {
     "SKIP": "Skip to content",
     "CONTENT": "Press tab to move to main content",
-    "ES": "Spanish",
-    "EN": "English"
+    "ES": "Select spanish language",
+    "EN": "Select english language"
   },
   "TITLE": {
     "SIGNUP":"Sign Up",
