--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -54,6 +54,8 @@
   "NAVBAR": {
     "SKIP": "Skip to content",
     "CONTENT": "Press tab to move to main content",
+    "SIGNUP":"Sign Up",
+    "LOGIN":"Login",
     "ES": "Select spanish language",
     "EN": "Select english language"
   },
