feat(home): new components

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -31,7 +31,7 @@
     "MENU":{
       "MY_FILES":"My Files",
       "PUBLIC_FILES":"Public Files",
-      "RECOMENDATIONS":"Recomendation",
+      "RECOMENDATIONS":"Recomendations",
       "UPLOAD":"Upload file",
       "REPORT":"Report an error",
       "FOLLOW":"Follow us",
