--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,12 +43,13 @@
       },
       "REPORT":{
         "NAME":"Bug report",
+        "SECTION":"Where did you find the error?",
         "ERROR":"Error description",
         "PLACEHOLDER_ERROR": "Describe the error",
         "REPORTBTN": "Report",
         "ACCESIBILITY":{
           "ERRORINPUT": "Error description input",
-          "UPDATEBTN": "Report button"
+          "REPORTBTN": "Report button"
         }
       },
       "ABOUT":{
