--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -43,12 +43,13 @@
       },
       "REPORT":{
         "NAME":"Reporta un error",
+        "SECTION":"¿En qué sección encontró el error?",
         "ERROR":"Descripción del error",
         "PLACEHOLDER_ERROR": "Describe el error",
         "REPORTBTN": "Reportar",
         "ACCESIBILITY":{
           "ERRORINPUT": "Campo descripción del error",
-          "UPDATEBTN": "Botón reportar"
+          "REPORTBTN": "Botón reportar"
         }
       },
       "ABOUT":{
