fix(spinner): new colors on spinner

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -116,6 +116,7 @@
     "SIGNUP":"Sign Up",
     "LOGIN":"Login",
     "ERRORREPORT":"Bug Report",
+    "ABOUT": "About us",
     "SETTINGS":"Settings"
   },
   "API":{
