feat(home): skip to content on menu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -84,6 +84,7 @@
         }
       },
       "LOGOUT":"Log out",
+      "SKIP": "Skip to content",
       "CONTENT": "Press tab to move to main content"
     }
   },
