--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -84,6 +84,7 @@
         }
       },
       "LOGOUT":"Cerrar Sesión",
+      "SKIP": "Ir al contenido",
       "CONTENT": "Presiona tab para ir al contenido principal"
     }
   },
